# demo-dev-envs

./: .gitignore  README.md
using-dev-container/: app.py  pyproject.toml  shell.nix
using-dev-container/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
using-nix/: default.nix  hello.hs  nix_app.py  setup.py
using-pdm/: .pdm.toml  app.py  default.nix  pyproject.toml  setup.py  shell.nix
