[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Norman Thomas", email = "me@norman.dev"},
]
dependencies = [
    "flask~=1.1",
    "requests~=2.25",
    "pymongo~=3.11",
    "mongoengine~=0.23",
]
dev-dependencies = [
    "pylint~=2.7",
    "flake8~=3.9",
    "pytest~=6.2",
    "mypy~=0.812",
    "pydocstyle~=6.0",
    "pycodestyle~=2.7",
    "bandit~=1.7",
    "black~=20.8b1",
    "yapf~=0.31",
    "autopep8~=1.5",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
start_server = { cmd = "pdm -I run python app.py" }
