[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Norman Thomas", email = "me@norman.dev"},
]
dependencies = [
    "flask~=1.1",
    "requests~=2.25",
]
dev-dependencies = [
    "pytest~=6.2",
    "pylint~=2.7",
    "flake8~=3.9",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
